--- a/examples/advanced/error-boundaries/index.html
+++ b/examples/advanced/error-boundaries/index.html
@@ -54,7 +54,7 @@
 
     <p class="section">Знакомство с границами ошибок</p>
     <p>Ошибка JavaScript в области пользовательского интерфейса не должна ломать все приложение. Чтобы решить эту проблему для пользователей React, React 16 представляет новую концепцию «граница ошибки».</p>
-    <p>Границы ошибок - это компоненты React, которые отлавливают ошибки JavaScript в любом месте их дочернего дерева компонентов, регистрируют эти ошибки и отображают резервный интерфейс вместо поломанного дерева компонентов. Границы ошибок перехватывают ошибки во время отрисовки, в методах жизненного цикла и в конструкторах всего дерева под ними.</p>
+    <p>Границы ошибок&nbsp;— это компоненты React, которые отлавливают ошибки JavaScript в любом месте их дочернего дерева компонентов, регистрируют эти ошибки и отображают резервный интерфейс вместо поломанного дерева компонентов. Границы ошибок перехватывают ошибки во время отрисовки, в методах жизненного цикла и в конструкторах всего дерева под ними.</p>
     <p>Компонент класса становится границей ошибки, если он определяет новый метод жизненного цикла, называемый componentDidCatch (error, info):</p>
 
     <pre><code class="language-js">
@@ -94,8 +94,8 @@
     <p>Обратите внимание, что граница ошибки отлавливает только ошибки в компонентах ниже их в дереве. Граница ошибки не может отловить ошибку внутри себя. Если текущая граница ошибки проваливает попытку отобразить сообщение об ошибке, ошибка будет распространяться на ближайшую границу ошибки выше по дереву иерархии. Это тоже похоже на то, как блок catch {} работает в JavaScript.</p>
 
     <p class="section">Параметры componentDidCatch</p>
-    <p>error - это ошибка, которая была выброшена.</p>
-    <p>info - это объект с ключом componentStack. Свойство содержит информацию о стеке компонентов во время выбрасывания ошибки.</p>
+    <p>error&nbsp;— это ошибка, которая была выброшена.</p>
+    <p>info&nbsp;— это объект с ключом componentStack. Свойство содержит информацию о стеке компонентов во время выбрасывания ошибки.</p>
     <pre><code class="language-js">
   //...
   componentDidCatch(error, info) {
