--- a/examples/advanced/forwarding-refs/index.html
+++ b/examples/advanced/forwarding-refs/index.html
@@ -50,7 +50,7 @@
 
 <div class="content">
     <p class="section">Передача ссылок</p>
-    <p>Передача ссылки - это метод для автоматической передачи ref через компонент к одному из его потомков. Обычно это не требуется для большинства компонентов приложения. Однако это может быть полезно для их некоторых видов, особенно в библиотеках компонентов для многоразового использования. Наиболее распространенные сценарии описаны ниже.</p>
+    <p>Передача ссылки&nbsp;— это метод для автоматической передачи ref через компонент к одному из его потомков. Обычно это не требуется для большинства компонентов приложения. Однако это может быть полезно для их некоторых видов, особенно в библиотеках компонентов для многоразового использования. Наиболее распространенные сценарии описаны ниже.</p>
 
     <p class="section">Передача ссылок в компоненты DOM</p>
     <p>Рассмотрим компонент FancyButton, который отображает нативный DOM элемент button:</p>
@@ -66,7 +66,7 @@
     </code></pre>
     <p>Компоненты React скрывают свои детали реализации, включая результат отрисовки. Другие компоненты, использующие FancyButton, обычно не нуждаются в получении ссылки ref на внутренний DOM элемент button. Это хорошо, так как мешает компонентам слишком сильно полагаться на DOM структуру друг друга.</p>
     <p>Хотя такая инкапсуляция и желательна для компонентов уровня приложения, таких как FeedStory или Comment, она может оказаться неудобной для часто переиспользуемых «листовых» компонентов(листья дерева компонентов), таких как FancyButton или MyTextInput. Эти компоненты, как правило, используются во всем приложении аналогичным образом, как и обычные DOM компоненты button и input, а доступ к их DOM узлам может быть неизбежным для управления фокусировкой, выбором(тег select) или анимацией.</p>
-    <p>Передача ссылок (ref forwarding) - это дополнительная функция, позволяющая компонентам передавать получаемую ссылку ref дальше своему потомку.</p>
+    <p>Передача ссылок (ref forwarding)&nbsp;— это дополнительная функция, позволяющая компонентам передавать получаемую ссылку ref дальше своему потомку.</p>
     <p>В приведенном ниже примере компонент FancyButton использует React.forwardRef для получения переданной ему ссылки ref и последующей передачи её DOM кнопке button, которую он отображает:</p>
     <pre><code class="language-js">
   const FancyButton = React.forwardRef((props, ref) => (
