--- a/examples/advanced/higher-order-comp/index.html
+++ b/examples/advanced/higher-order-comp/index.html
@@ -50,8 +50,8 @@
 
 <div class="content">
     <p class="section">Компоненты более высокого порядка </p>
-    <p>Компонент более высокого порядка (КБВП) (в документации Higher-Order Components – сокращенно HOC), или старшие компоненты представляет собой усовершенствованный подход в React для повторного использования логики компонентов. Старшие компоненты не являются частью React API, как таковой. Они представляют собой паттерн, который возникает из композиционной природы React.</p>
-    <p>Компонент более высокого порядка, или старший компонент - это функция, которая принимает компонент и возвращает новый компонент.</p>
+    <p>Компонент более высокого порядка (КБВП) (в документации Higher-Order Components — сокращенно HOC), или старшие компоненты представляет собой усовершенствованный подход в React для повторного использования логики компонентов. Старшие компоненты не являются частью React API, как таковой. Они представляют собой паттерн, который возникает из композиционной природы React.</p>
+    <p>Компонент более высокого порядка, или старший компонент&nbsp;— это функция, которая принимает компонент и возвращает новый компонент.</p>
     <pre><code class="language-js">
         const EnhancedComponent = higherOrderComponent(WrappedComponent);
          <CustomButton color="red"/>
@@ -69,7 +69,7 @@
       super();
       this.onChange = this.onChange.bind(this);
       this.state = {
-        // "NotificationDataStore"  - некоторый глобальный источник данных
+        // "NotificationDataStore"&nbsp;— некоторый глобальный источник данных
         notifications: NotificationDataStore.getNotifications()
       };
     }
@@ -139,7 +139,7 @@
   }
          <CustomButton color="red"/>
     </code></pre>
-    <p>NotificationList и NotificationDetails не идентичны - они используют разные методы NotificationDataStore и выводят разные результаты. Но большая часть их реализации одинакова:</p>
+    <p>NotificationList и NotificationDetails не идентичны&nbsp;— они используют разные методы NotificationDataStore и выводят разные результаты. Но большая часть их реализации одинакова:</p>
     <p>Сразу после монтирования добавляется слушатель изменений в NotificationDataStore.</p>
     <p>Внутри слушателя setState вызывается каждый раз, когда изменяется источник данных.</p>
     <p>При демонтаже слушатель изменений удаляется.</p>
@@ -157,7 +157,7 @@
   );
          <CustomButton color="red"/>
     </code></pre>
-    <p>Первый параметр - это оборачиваемый компонент. Второй параметр извлекает данные, которые нас интересуют, используя NotificationDataStore и текущие свойства.</p>
+    <p>Первый параметр&nbsp;— это оборачиваемый компонент. Второй параметр извлекает данные, которые нас интересуют, используя NotificationDataStore и текущие свойства.</p>
     <p>Когда NotificationListWithSubscription и NotificationDetailsWithSubscription отрисовываются, NotificationList и NotificationDetails получат свойство data, с самыми последними данными, полученными из NotificationDataStore:</p>
     <pre><code class="language-js">
   // Данная функция принимает компонент...
@@ -196,7 +196,7 @@
   }
          <CustomButton color="red"/>
     </code></pre>
-    <p>Обратите внимание, что старший компонент не изменяет оригинальный компонент и не использует наследование для копирования его поведения. Вместо этого, старший компонент применяет композицию к исходному компоненту, обернув его в компонент-контейнер. Старший компонент - чистая функция с нулевыми побочными эффектами.</p>
+    <p>Обратите внимание, что старший компонент не изменяет оригинальный компонент и не использует наследование для копирования его поведения. Вместо этого, старший компонент применяет композицию к исходному компоненту, обернув его в компонент-контейнер. Старший компонент&nbsp;— чистая функция с нулевыми побочными эффектами.</p>
     <p>Вот и все! Обернутый компонент получает все свойства контейнера вместе с новым свойством prop, которые он использует для своей отрисовки. Старший компонент не имеет отношения к тому, как используются данные, а упакованный компонент не имеет отношения к тому, откуда пришли данные.</p>
     <p>Так как addSubscription является обычной функцией, вы можете добавить столько аргументов, сколько захотите. Например, вы можете захотеть указать имя свойства data конфигурируемым, чтобы дополнительно изолировать старший компонент от упакованного компонента. Или же, вы можете принять аргумент, который конфигурирует shouldComponentUpdate, либо, который настраивает источник данных. Все это является возможным, поскольку старший компонент имеет полный контроль над тем, как он определен.</p>
     <p>Как и компоненты, взаимодействие между addSubscription и упакованным компонентом полностью основано на свойствах props. Это упрощает замену одного старшего компонента на другой, если они предоставляют те же свойства props для упакованного компонента. Это может оказаться полезным, если вы, например, поменяете библиотеки для извлечения данных.</p>
@@ -209,7 +209,7 @@
       //...
     }
     // Тот факт, что мы возвращаем оригинальный входной
-    // компонент - признак того, что он был изменен
+    // компонент&nbsp;— признак того, что он был изменен
     return TargetComponent;
   }
 
@@ -218,7 +218,7 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Здесь есть несколько проблем. Во-первых, входной компонент нельзя повторно использовать отдельно от модифицированного компонента. Более того, если вы примените еще один старший компонент к ComponentWithDebug, который также будет изменять например componentDidMount, то функция первого старшего компонента будет переопределена! Кроме того, такой старший компонент не будет работать с функциональными компонентами, которые не имеют методов жизненного цикла.</p>
-    <p>Изменяющий старший компонент - это плохая абстракция, так как тот, кто его использует, должен знать его детали реализации, чтобы избежать конфликтов с другими старшими объектами.</p>
+    <p>Изменяющий старший компоне&nbsp;— это плохая абстракция, так как тот, кто его использует, должен знать его детали реализации, чтобы избежать конфликтов с другими старшими объектами.</p>
     <p>Вместо изменения оригинального компонента старшим компонентом вы должны использовать композицию, обертывая входной компонент в компонент-контейнер:</p>
 
     <pre><code class="language-js">
@@ -228,7 +228,7 @@
         this.setState({errorMessage: {isShowed: true, text: text});
       }
       render() {
-        // Обертывает исходный компонент в контейнер без изменения - правильно!
+        // Обертывает исходный компонент в контейнер без изменения&nbsp;— правильно!
         return &lt;TargetComponent {...this.props} />;
       }
     }
@@ -258,7 +258,7 @@
     <p>Это соглашение помогает обеспечить максимально гибкое и многоразовое использование старших компонентов.</p>
 
     <p class="section">Соглашение: максимальная компонуемость</p>
-    <p>Не все старшие компоненты выглядят одинаково. Иногда они принимают только один аргумент - завернутый компонент:</p>
+    <p>Не все старшие компоненты выглядят одинаково. Иногда они принимают только один аргумент&nbsp;— завернутый компонент:</p>
     <pre><code class="language-js">
         const MyComponentWithErrorMessage = errorMessageSupport(MyComponent);
          <CustomButton color="red"/>
@@ -279,12 +279,12 @@
     <pre><code class="language-js">
   // connect это функция, которая возвращает другую функцию
   const hoc = connect(notificationListSelector, notificationListActions);
-  // Возвращаемая функция - старший компонент, который возвращает компонент,
+  // Возвращаемая функция&nbsp;— старший компонент, который возвращает компонент,
   // который является подключаемым к хранилищу данных Redux
   const ConnectedToReduxStoreNotificationList = hoc(NotificationList);
          <CustomButton color="red"/>
     </code></pre>
-    <p>Другими словами, connect - это функция более высокого порядка, которая возвращает компонент более высокого порядка!</p>
+    <p>Другими словами, connect&nbsp;— это функция более высокого порядка, которая возвращает компонент более высокого порядка!</p>
     <p>Такая форма записи может показаться излишне запутанной или ненужной, но она имеет полезное свойство. Старшие компоненты с одним аргументом, такие как возвращаются функцией connect, имеют сигнатуру Component => Component. Функции, тип вывода которых совпадает с типом ввода, очень легко скомбинировать вместе.</p>
     <pre><code class="language-js">
   // Вместо этого...
@@ -293,7 +293,7 @@
   // ... вы можете использовать утилиту композиции функций
   // compose(x, y, z) то же самое, что (...args) => x(y(z(...args)))
   const hoc = compose(
-    // Оба аргумента - старшие компоненты
+    // Оба аргумента&nbsp;— старшие компоненты
     connect(notificationSelector),
     addScrollSupport
   )
@@ -305,7 +305,7 @@
 
     <p class="section">Соглашение: оборачивайте отображаемое имя для простоты отладки</p>
     <p>Компоненты-контейнеры, созданные старшими компонентами, отображаются в инструментах разработчика React, как и любой другой компонент. Чтобы облегчить отладку, выберите отображаемое имя, которое сообщает, что это результат старшего компонента.</p>
-    <p>Наиболее распространенным методом является оборачивание отображаемого имени упакованного компонента. Поэтому, если ваш компонент более высокого порядка называется addSubscription, а отображаемое имя обернутого компонента - UserList, используйте имя для отображения AddSubscription (UserList):</p>
+    <p>Наиболее распространенным методом является оборачивание отображаемого имени упакованного компонента. Поэтому, если ваш компонент более высокого порядка называется addSubscription, а отображаемое имя обернутого компонента&nbsp;— UserList, используйте имя для отображения AddSubscription (UserList):</p>
     <pre><code class="language-js">
  function addSubscription(OriginComponent) {
     class SubscriptionSupport extends React.Component {/* ... */}
@@ -335,8 +335,8 @@
   }
          <CustomButton color="red"/>
     </code></pre>
-    <p>Проблема здесь заключается не только в производительности - перемонтаж компонента приводит к потере состояния этого компонента и всех его потомков.</p>
-    <p>Вместо этого применяйте старшие компоненты вне определения исходного компонента, чтобы результирующий компонент был создан только один раз. Тогда его идентичность будет согласованной между отрисовками (вызовами render) компонента. Обычно – это именно то, что вам нужно.</p>
+    <p>Проблема здесь заключается не только в производительности&nbsp;— перемонтаж компонента приводит к потере состояния этого компонента и всех его потомков.</p>
+    <p>Вместо этого применяйте старшие компоненты вне определения исходного компонента, чтобы результирующий компонент был создан только один раз. Тогда его идентичность будет согласованной между отрисовками (вызовами render) компонента. Обычно — это именно то, что вам нужно.</p>
     <p>В тех редких случаях, когда вам нужно динамически применять старшие компоненты, вы также можете делать это внутри жизненного цикла исходного компонента или его конструктора.</p>
 
     <p class="section">Статические методы должны быть скопированы</p>
@@ -387,9 +387,9 @@
     </code></pre>
 
     <p class="section">Ссылки не передаются</p>
-    <p>Не смотря на то, что соглашением для компонентов более высокого порядка является передача всех свойств через упакованный компонент вниз по дереву иерархии, невозможно передать ref. Это происходит потому, что фактически - ref не является свойством как key, он обрабатывается React-от специальным образом. Если вы добавите ref в элемент, компонент которого является результатом старшего компонента, ref будет ссылаться на экземпляр внешнего компонента-контейнера, а не на упакованный компонент.</p>
+    <p>Не смотря на то, что соглашением для компонентов более высокого порядка является передача всех свойств через упакованный компонент вниз по дереву иерархии, невозможно передать ref. Это происходит потому, что фактически&nbsp;— ref не является свойством как key, он обрабатывается React-от специальным образом. Если вы добавите ref в элемент, компонент которого является результатом старшего компонента, ref будет ссылаться на экземпляр внешнего компонента-контейнера, а не на упакованный компонент.</p>
     <p>Если вы столкнулись с этой проблемой, идеальным решением является анализ того, как вообще избежать использования ref. Иногда пользователи, которые являются новичками в парадигме React, полагаются на ссылки ref в ситуациях, когда свойства props будут работать лучше.</p>
-    <p>Тем не менее, бывают случаи, когда refs являются необходимым аварийным выходом – иначе React бы их не поддерживал. Примером может являться фокусировка поля ввода, где вы можете потребовать обязательный контроль над компонентом. В этом случае одним из решений является передача обратного вызова ref в качестве обычного свойства, давая ему другое имя:</p>
+    <p>Тем не менее, бывают случаи, когда refs являются необходимым аварийным выходом — иначе React бы их не поддерживал. Примером может являться фокусировка поля ввода, где вы можете потребовать обязательный контроль над компонентом. В этом случае одним из решений является передача обратного вызова ref в качестве обычного свойства, давая ему другое имя:</p>
     <pre><code class="language-js">
   function TextField({ inputRef, ...rest }) {
     return &lt;input ref={inputRef} {...rest} />;
