--- a/examples/advanced/integrating-with-lib/index.html
+++ b/examples/advanced/integrating-with-lib/index.html
@@ -55,7 +55,7 @@
     <p class="section">Интеграция с плагинами манипуляции DOM</p>
     <p>React не знает об изменениях, внесенных в DOM вне контекста React. Он определяет обновления, основанные на собственном внутреннем представлении, и если одни и те же узлы DOM управляются другой библиотекой, React запутывается и не имеет возможности восстановления.</p>
     <p>Это не означает, что невозможно или чрезвычайно сложно совместить React с другими способами воздействия на DOM, вам просто нужно понимать, что каждый из них делает.</p>
-    <p>Самый простой способ избежать конфликтов - предотвратить обновление компонента React. Вы можете сделать это, предоставив элементы, для которых у React нет никаких причин их обновлять, например, пустой &lt;div />.</p>
+    <p>Самый простой способ избежать конфликтов&nbsp;— предотвратить обновление компонента React. Вы можете сделать это, предоставив элементы, для которых у React нет никаких причин их обновлять, например, пустой &lt;div />.</p>
 
     <p class="section">Как подойти к проблеме</p>
     <p>Чтобы это продемонстрировать, давайте построим обёртку для известного плагина jQuery.</p>
