--- a/examples/advanced/jsx-in-depth/index.html
+++ b/examples/advanced/jsx-in-depth/index.html
@@ -113,7 +113,7 @@
 
     <p>Распространенные атрибуты</p>
     <p>Если вы уже имеете объект "props" и хотите передать его в JSX,
-        вы можете использовать "оператор распространения" : ...</p>
+        вы можете использовать «оператор распространения»: ...</p>
 
     <pre><code class="language-js">
         function App1() {
