--- a/examples/advanced/portals/index.html
+++ b/examples/advanced/portals/index.html
@@ -88,7 +88,7 @@
         <CustomButton color="red"/>
     </code></pre>
 
-    <p>Типичный вариант использования порталов - это когда родительский компонент имеет overflow: hidden или z-index стиль, но вам нужно, чтобы дочерний компонент визуально «выходил» из своего контейнера. Например, диалоги, всплывающие подсказки.</p>
+    <p>Типичный вариант использования порталов&nbsp;— это когда родительский компонент имеет overflow: hidden или z-index стиль, но вам нужно, чтобы дочерний компонент визуально «выходил» из своего контейнера. Например, диалоги, всплывающие подсказки.</p>
 
     <p class="section">Всплытие событий через порталы</p>
     <p>Несмотря на то, что портал может быть где угодно в дереве DOM, он ведет себя как обычный дочерний элемент React во всех отношениях. Такие функции, как контекст, работают как и ранее, независимо от того, является ли дочерний элемент порталом, поскольку портал все еще существует в дереве React независимо от его положения в дереве DOM.
