--- a/examples/advanced/react-without-jsx/index.html
+++ b/examples/advanced/react-without-jsx/index.html
@@ -55,7 +55,7 @@
     <p>JSX не является обязательным при использовании React. Использование React без JSX особенно удобно, если вы не
         хотите настраивать компиляцию в своей среде сборки.</p>
 
-    <p>Каждый элемент JSX является просто синтаксическим сахаром (синтаксический сахар - это синтаксические возможности,
+    <p>Каждый элемент JSX является просто синтаксическим сахаром (синтаксический сахар&nbsp;— это синтаксические возможности,
         применение которых не влияет на поведение программы) для вызова React.createElement(component, props,
         ...children). Так что, всё, что вы можете сделать с помощью JSX, также можно выполнить и с помощью чистого
         JavaScript.</p>
