--- a/examples/advanced/refs-and-dom/index.html
+++ b/examples/advanced/refs-and-dom/index.html
@@ -53,7 +53,7 @@
     <p class="section">Ссылки Ref и DOM</p>
 
     <p>Ссылки предоставляют способ доступа к элементам DOM или React, созданным в методе отрисовки.</p>
-    <p>В типичном потоке данных React, свойства props – это единственный способ взаимодействия родительского компонента
+    <p>В типичном потоке данных React, свойства props — это единственный способ взаимодействия родительского компонента
         с его потомком. Чтобы модифицировать потомка, вы перерисовываете его с новыми свойствами. Тем не менее, есть
         несколько случаев, когда вам необходимо модифицировать потомок вне обычного потока данных. Потомок, подлежащий
         модификации, может быть экземпляром React-компонента или DOM-элементом.</p>
