--- a/examples/advanced/strict-mode/index.html
+++ b/examples/advanced/strict-mode/index.html
@@ -50,7 +50,7 @@
 
 <div class="content">
     <p class="section">Строгий режим</p>
-    <p>StrictMode - инструмент для выделения потенциальных проблем в приложении. Как и Fragment, StrictMode не отображает какой-либо видимый UI. Он активирует дополнительные проверки и предупреждения для своих потомков.</p>
+    <p>StrictMode&nbsp;— инструмент для выделения потенциальных проблем в приложении. Как и Fragment, StrictMode не отображает какой-либо видимый UI. Он активирует дополнительные проверки и предупреждения для своих потомков.</p>
     <p>Вы можете включить строгий режим для любой части вашего приложения. Например:</p>
     <pre><code class="language-js">
   import React from 'react';
@@ -110,7 +110,7 @@
     <p class="section">Обнаружение неожиданных сторонних эффектов</p>
     <p>Концептуально, React работает в две фазы:</p>
     <p>Фаза отрисовки (render) определяет, какие изменения необходимо произвести. В данной фазе React вызывает render, а затем сравнивает результат с предыдущим результатом вызова render.</p>
-    <p>Фаза фиксации (commit) - в ней React применяет любые изменения. (В случае React DOM - это фаза, когда React вставляет, обновляет и удаляет узлы DOM.) В данной фазе React также вызывает методы жизненного цикла, такие как componentDidMount и componentDidUpdate.</p>
+    <p>Фаза фиксации (commit)&nbsp;— в ней React применяет любые изменения. (В случае React DOM&nbsp;— это фаза, когда React вставляет, обновляет и удаляет узлы DOM.) В данной фазе React также вызывает методы жизненного цикла, такие как componentDidMount и componentDidUpdate.</p>
     <p>К методам жизненного цикла фазы отрисовки относятся следующие методы компонента-класса:constructor, componentWillMount, componentWillReceiveProps, componentWillUpdate, getDerivedStateFromProps, shouldComponentUpdate, render, обновляющие функции метода setState (первый аргумент).</p>
     <p>Поскольку вышеупомянутые методы могут быть вызваны более одного раза, важно, чтобы они не содержали каких-либо сторонних эффектов. Игнорирование этого правила может привести к множеству проблем, включая утечку памяти и нерелевантное состояние приложения. К сожалению, бывает довольно трудно обнаружить эти проблемы, поскольку они часто могут быть недетерминированными.</p>
     <p>Строгий режим не может автоматически обнаруживать для вас побочные эффекты, но он может помочь вам определить их, сделав их немного более детерминированными. Это достигается путем преднамеренного двойного вызова следующих методов:Метод constructor компонента-класса. Метод render. обновляющие функции метода setState (первый аргумент), Статический метод getDerivedStateFromProps.</p>
