--- a/examples/advanced/typechecking-with-proptypes/index.html
+++ b/examples/advanced/typechecking-with-proptypes/index.html
@@ -51,7 +51,7 @@
 
     <p class="section">Проверка типов с помощью PropTypes</p>
 
-    <p>React.PropTypes устарел начиная с React v15.5 но новый пакет Node.js - <a
+    <p>React.PropTypes устарел начиная с React v15.5 но новый пакет Node.js&nbsp;— <a
             href="https://www.npmjs.com/package/prop-types">prop-types</a>. Однако вы все еще можете его
         использовать.</p>
 
