--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -76,7 +76,7 @@
     </p>
 
     <p>
-      Мы рекомендуем использовать <a href="https://yarnpkg.com/lang/en/">Yarn</a> или <a href="https://www.npmjs.com/">npm</a> для управления внешними зависимостями. Если вы новичок в менеджерах пакетов, то <a href="https://yarnpkg.com/en/docs/getting-started">Yarn-документация</a> - это хорошее место для начала изучения.
+      Мы рекомендуем использовать <a href="https://yarnpkg.com/lang/en/">Yarn</a> или <a href="https://www.npmjs.com/">npm</a> для управления внешними зависимостями. Если вы новичок в менеджерах пакетов, то <a href="https://yarnpkg.com/en/docs/getting-started">Yarn-документация</a>&nbsp;— это хорошее место для начала изучения.
     </p>
 
     <p>
@@ -102,7 +102,7 @@
     </p>
 
     <p>
-      Мы рекомендуем использовать React с <a href="http://babeljs.io/">Babel</a>, чтобы вы могли использовать ES6 и JSX в своем JavaScript-коде. ES6 - это набор современных функций JavaScript, которые упрощают разработку, а JSX является расширением языка JavaScript, который
+      Мы рекомендуем использовать React с <a href="http://babeljs.io/">Babel</a>, чтобы вы могли использовать ES6 и JSX в своем JavaScript-коде. ES6&nbsp;— это набор современных функций JavaScript, которые упрощают разработку, а JSX является расширением языка JavaScript, который
       отлично работает с React.
     </p>
 
