--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -55,7 +55,7 @@
   <div class="content">
     <p class="section">Создание нового приложения React</p>
 
-    <p>Самый простой способ начать работу над новым проектом React - это использовать стартовый комплект.</p>
+    <p>Самый простой способ начать работу над новым проектом React&nbsp;— это использовать стартовый комплект.</p>
 
     <p>
       Заметка:
@@ -71,7 +71,7 @@
     <p class="section">Create React App</p>
 
     <p>
-      <a href="https://github.com/facebook/create-react-app">Create React App</a> - лучший способ начать создать одностраничное приложение React. Он настраивает среду разработки так, чтобы вы могли использовать новейшие функции JavaScript, обеспечивает комфортную разработку и оптимизирует ваше
+      <a href="https://github.com/facebook/create-react-app">Create React App</a>&nbsp;— лучший способ начать создать одностраничное приложение React. Он настраивает среду разработки так, чтобы вы могли использовать новейшие функции JavaScript, обеспечивает комфортную разработку и оптимизирует ваше
       приложение для производства. Вам понадобится Node.js версии 6.0 или старше на вашем компьютере.
     </p>
 
