--- a/examples/quick-start/components-and-props/index.html
+++ b/examples/quick-start/components-and-props/index.html
@@ -56,11 +56,11 @@
 
     <p>Компоненты позволяют разделять UI на независимые, повторно используемые фрагменты, и обдумывать каждый из них
     отдельно. По своей концепции, компоненты похожи на функции в JavaScript. Они принимают какие-либо данные
-    (называемые "свойства") и возвращают элементы React, описывающие, что должно появиться на экране.</p>
+    (называемые «свойства») и возвращают элементы React, описывающие, что должно появиться на экране.</p>
 
     <p class="section">Функциональные компоненты и компоненты-классы</p>
 
-    <p>Простейший способ создания компонента - это написание JavaScript-функции:</p>
+    <p>Простейший способ создания компонента&nbsp;— это написание JavaScript-функции:</p>
 
     <pre><code class="language-js">
         function Welcome(props) {
@@ -68,8 +68,8 @@
         }
     </code></pre>
 
-    <p>Эта функция - компонент React, потому что она принимает одно "props" (свойство) в качестве аргумента с
-    информацией и возвращает элемент React. Эти компоненты называются "функциональные", так как они идентичны
+    <p>Эта функция&nbsp;— компонент React, потому что она принимает одно "props" (свойство) в качестве аргумента с
+    информацией и возвращает элемент React. Эти компоненты называются «функциональные», так как они идентичны
     функциям JavaScript.</p>
     <p>Для создания этого же компонента можно также использовать классы ES6:</p>
 
@@ -99,8 +99,8 @@
     </code></pre>
 
     <p>Когда React обнаруживает такой элемент, то он передает JSX атрибуты компоненту как отдельному объекту.
-    Такой объект называется "свойство".</p>
-    <p>Приведем пример программы, которая выводит на экран надпись "Привет, Сара!":</p>
+    Такой объект называется «свойство».</p>
+    <p>Приведем пример программы, которая выводит на экран надпись «Привет, Сара!»:</p>
     <pre><code class="language-js">
         function Welcome(props) {
             return &lt;h1&gt;Привет, {props.name}!&lt;/h1&gt;;
@@ -124,7 +124,7 @@
     <div class="warning">
         <p><b>Важно! Всегда называйте свои компоненты с большой буквы!</b></p>
         <p>React воспринимает компоненты, названные с маленькой буквы, как теги DOM. Например, <mark>&lt;div /&gt;</mark>
-        представляет собой тег HTML, а <mark>&lt;Welcome /&gt;</mark> - компонент.</p>
+        представляет собой тег HTML, а <mark>&lt;Welcome /&gt;</mark>&nbsp;— компонент.</p>
     </div>
 
     <p class="section">Сочетание компонентов</p>
@@ -285,7 +285,7 @@
         }
     </code></pre>
 
-    <p>Такие функции называют "чистыми", потому что они не меняют принимаемые данные и всегда возвращают один и тот же
+    <p>Такие функции называют «чистыми», потому что они не меняют принимаемые данные и всегда возвращают один и тот же
     результат для одних и тех же данных. Для сравнения, это примесная функция, потому что она меняет принимаемые данные:
     </p>
 
@@ -297,7 +297,7 @@
 
     <p>React достаточно гибок, но имеет одно строгое правило:</p>
     <p><b>Все компоненты React должны работать как чистые по отношению к своим свойствам.</b></p>
-    <p>Конечно, UI приложения динамичны и меняются со временем. В следующей главе мы введём новое понятие "состояние".
+    <p>Конечно, UI приложения динамичны и меняются со временем. В следующей главе мы введём новое понятие «состояние».
     Состояние позволяет компонентам React изменять свой результат с течение времени в ответ на действия
     пользователя, сетевые запросы, и любые другие действия, не нарушая этого правила.</p>
 
