--- a/examples/quick-start/composition-vs-inheritance/index.html
+++ b/examples/quick-start/composition-vs-inheritance/index.html
@@ -102,7 +102,7 @@
     <p>Все содержимое тега JSX <mark>&lt;FancyBorder&gt;</mark> передаётся компоненту <mark>FancyBorder</mark> как
     свойство <mark>children</mark>. Так как <mark>FancyBorder</mark> помещает <mark>{props.children}</mark> в
     <mark>&lt;div&gt;</mark>, то переданные элементы появляются в итоге на выходе.</p>
-    <p>Хоть это и менее распространено, иногда вам может понадобиться несколько "дыр" в вашем компоненте. В таких
+    <p>Хоть это и менее распространено, иногда вам может понадобиться несколько «дыр» в вашем компоненте. В таких
     случаях вы можете придумать собственное решение проблем, вместо использования <mark>children</mark>:</p>
 
     <pre><code class="language-js">
@@ -133,14 +133,14 @@
     </code></pre>
 
     <p>Элементы React, такие как <mark>&lt;Contracts /&gt;</mark> и <mark>&lt;Chat /&gt;</mark>, всего лишь объекты, так
-    что вы можете их передавать как свойства (как и любую другую информацию). Такой подход может напоминать о "слотах" в
+    что вы можете их передавать как свойства (как и любую другую информацию). Такой подход может напоминать о «слотах» в
     других библиотеках, но в нашем случае нет никаких ограничений на то, что можно передать в качестве свойства.</p>
 
     <p class="section">Частные случаи</p>
 
-    <p>Иногда мы представляем компоненты как "частные случаи" других компонентов. Для примера, мы можем сказать, что
+    <p>Иногда мы представляем компоненты как «частные случаи» других компонентов. Для примера, мы можем сказать, что
     <mark>WelcomeDialog</mark> это частный случай компонента <mark>Dialog</mark>.</p>
-    <p>В React, это также достигается с помощью композиции, в которой "частные" компоненты создают более "общие" и
+    <p>В React, это также достигается с помощью композиции, в которой «частные» компоненты создают более «общие» и
     управляют их свойствами:</p>
 
     <pre><code class="language-js">
