--- a/examples/quick-start/conditional-rendering/index.html
+++ b/examples/quick-start/conditional-rendering/index.html
@@ -97,7 +97,7 @@
 
     <p>Вы можете использовать переменные для хранения элементов. Это может помочь вам выборочно вынести части компонента
     и не затронуть остальные.</p>
-    <p>Разберем эти два новых компонента, представляющие собой кнопки "Вход" и "Выход":</p>
+    <p>Разберем эти два новых компонента, представляющие собой кнопки «Вход» и «Выход»:</p>
 
     <pre><code class="language-js">
         function LoginButton(props) {
@@ -168,7 +168,7 @@
         <div id="root"></div>
     </div>
 
-    <p>Объявление переменной и использование условного оператора <mark>if</mark> - это отличный способ реализации
+    <p>Объявление переменной и использование условного оператора <mark>if</mark>&nbsp;— это отличный способ реализации
     выборочного рендеринга компонента, но иногда нам может понадобиться использовать более короткий синтаксис. Есть несколько
     способов внедрения условий в JSX. Они объяснены ниже.</p>
 
@@ -206,7 +206,7 @@
 
     <p class="section">Замена If-Else на тернарный условный оператор</p>
 
-    <p>Другой способ для выборочного рендеринга элементов - использование оператора <mark class="markJSX">условие ?
+    <p>Другой способ для выборочного рендеринга элементов&nbsp;— использование оператора <mark class="markJSX">условие ?
     истинна : ложь</mark>.</p>
     <p>В примере ниже, мы выборочно отобразим небольшой кусок текста:</p>
 
