--- a/examples/quick-start/forms/index.html
+++ b/examples/quick-start/forms/index.html
@@ -71,7 +71,7 @@
     <p>Эта форма ведет себя как элемент простого HTML: перенаправляет пользователя на новую страницу, когда тот
     заполнит форму. В React это работает также. Но в большинстве случаев лучше иметь JavaScript функцию, которая будет
     обрабатывать представление формы и иметь доступ к информации, которую введет пользователь. Стандартным способом
-    достижения этого является технология "управляемых компонентов".</p>
+    достижения этого является технология «управляемых компонентов».</p>
 
     <p class="section">Управляемые компоненты</p>
 
@@ -79,9 +79,9 @@
     поддерживают своё состояние и обновляют его при вводе данных. В React же, непостоянное состояние хранится в свойствах
     состояния компонента и обновляется только с помощью <mark class="markJSX">setState()</mark>.</p>
 
-    <p>Мы можем объединить их оба, сделав состояние React "единственным источником правды". Компонент React, который
+    <p>Мы можем объединить их оба, сделав состояние React «единственным источником правды». Компонент React, который
     отображает форму, также и контролирует то, что с ней происходит при последующем вводе данных пользователем. Форма
-    ввода, чьё значение контролирует React таким образом, называется "управляемый компонент".</p>
+    ввода, чьё значение контролирует React таким образом, называется «управляемый компонент».</p>
 
     <p>Например, если мы хотим заставить предыдущий пример выводить имя после его ввода, то мы можем сделать форму
     управляемого компонента:</p>
@@ -202,7 +202,7 @@
         &lt;/select&gt;
     </code></pre>
 
-    <p>Обратите внимание, что "Апельсин" выбран по умолчанию, так как имеет атрибут <mark>selected</mark>. React, вместо
+    <p>Обратите внимание, что «Апельсин» выбран по умолчанию, так как имеет атрибут <mark>selected</mark>. React, вместо
     этого атрибута, использует атрибут <mark>value</mark> в корне тега <mark>select</mark>. Так намного удобнее для
     управляемых компонентов, потому что вам нужно обновить его только в одном месте. Покажем на примере:</p>
 
@@ -250,7 +250,7 @@
     </div>
 
     <p>Подведем промежуточный итог: <mark>&lt;input type="text"&gt;</mark>, <mark>&lt;textarea&gt;</mark> и
-    <mark>&lt;select&gt;</mark> работают по одному принципу - они все принимают атрибут <mark>value</mark>, который
+    <mark>&lt;select&gt;</mark> работают по одному принципу&nbsp;— они все принимают атрибут <mark>value</mark>, который
     можно использовать для создания управляемого элемента.</p>
 
     <div class="warning">
