--- a/examples/quick-start/handling-events/index.html
+++ b/examples/quick-start/handling-events/index.html
@@ -110,7 +110,7 @@
     первоначально отрисован.</p>
     <p>Когда вы объявляете компонент как <mark class="markJSX">класс ES6</mark>, образцом для обработчика событий
     является метод класса. Допустим, что у нас есть компонент <mark>Toggle</mark>, который создаёт кнопку,
-    позволяющую пользователю переключать её состояние с "ВКЛЮЧЕНО" на "ВЫКЛЮЧЕНО" и наоборот:</p>
+    позволяющую пользователю переключать её состояние с «ВКЛЮЧЕНО» на «ВЫКЛЮЧЕНО» и наоборот:</p>
 
     <pre><code class="language-js">
         class Toggle extends React.Component {
@@ -153,10 +153,10 @@
     <p>Будьте осторожны при работе со значением <mark>this</mark> в JSX-функциях обратного вызова. В JavaScript по
     умолчанию методы классов не привязаны. Если вы забудете привязать <mark>this.handleClick</mark> и передадите его в
     <mark>onClick</mark>, то <mark>this</mark> будет неопределенна во время вызова функции.</p>
-    <p>Такое поведение присуще не только React - именно так работают все функции в JavaScript. В общем случае, если вы
+    <p>Такое поведение присуще не только React&nbsp;— именно так работают все функции в JavaScript. В общем случае, если вы
     обращаетесь к методу без простановки<mark>()</mark>, например <mark>onClick={this.handleClick}</mark>, то вам
     следует привязать его.</p>
-    <p>Если вас раздражает вызывать <mark>bind</mark>, то у есть два пути обхода. Первый - это использовать
+    <p>Если вас раздражает вызывать <mark>bind</mark>, то у есть два пути обхода. Первый&nbsp;— это использовать
     экспериментально новый плагин <a href="https://babeljs.io/docs/plugins/transform-class-properties/">
     Class properties transform</a>, в котором вы можете использовать поля класса для корректной привязки функций
     обратного вызова:</p>
@@ -180,7 +180,7 @@
     </code></pre>
 
     <p>React поддерживает данный синтаксис по умолчанию.</p>
-    <p>Второй путь - использование стрелочных функций в обратных вызовах:</p>
+    <p>Второй путь&nbsp;— использование стрелочных функций в обратных вызовах:</p>
 
     <pre><code class="language-js">
         class LoggingButton extends React.Component {
@@ -218,7 +218,7 @@
     <p>Строки идентичны, и в них используются стрелочные функции и соответственно
     <mark class="markJSX">Function.prototype.bind</mark>.</p>
     <p>В обоих случаях, параметр <mark>e</mark> представляет собой React-событие, которое будет передано в качестве
-    второго ( ID - первый) параметра. С помощью стрелочной функции мы передаём его явно, и благодаря
+    второго (ID&nbsp;— первый) параметра. С помощью стрелочной функции мы передаём его явно, и благодаря
     <mark>bind</mark> любые дополнительные параметры будут автоматически перенаправлены.</p>
 
     <div class="lr-btn">
