--- a/examples/quick-start/hello-world/index.html
+++ b/examples/quick-start/hello-world/index.html
@@ -54,7 +54,7 @@
 <div class="content">
     <p class="section">Вступление</p>
 
-    <p>Для работы с React вы можете использовать <a href="https://codepen.io/pen?&editors=0010">CodePen</a> - платформу
+    <p>Для работы с React вы можете использовать <a href="https://codepen.io/pen?&editors=0010">CodePen</a>&nbsp;— платформу
         для редактирования и хранения кода на HTML, css и JavaScript с просмотром готового результата в браузере. Если
         же вы
         предпочитаете работать с локальной средой разработки, то посетите раздел
