--- a/examples/quick-start/introducing-jsx/index.html
+++ b/examples/quick-start/introducing-jsx/index.html
@@ -59,11 +59,11 @@
         const element = &lt;h1&gtHello, world!&lt;/h1&gt;;
     </code></pre>
 
-    <p>Этот забавный синтаксис не является ни строкой, ни HTML. Он называется JSX - это расширение для JavaScript.
+    <p>Этот забавный синтаксис не является ни строкой, ни HTML. Он называется JSX&nbsp;— это расширение для JavaScript.
     Мы рекомендуем использовать его для работы с React, чтобы описать, что представляет собой пользовательский
         интерфейс (User Interface, UI). Синтаксис JSX может показаться вам схожим с языком разметки HTML, но он
         обладает всей функциональностью JavaScript.</p>
-    <p>JSX создает "элементы" React. В следующей главе мы изучим, как добавить их в DOM. Далее же, мы рассмотрим
+    <p>JSX создает «элементы» React. В следующей главе мы изучим, как добавить их в DOM. Далее же, мы рассмотрим
     основы JSX, необходимые для работы с ним.</p>
 
     <p class="section">Почему именно JSX?</p>
@@ -71,7 +71,7 @@
     <p>React подразумевает тот факт, что логика визуализации по своей природе связана с логикой UI: как
         обрабатываются события, как меняется состояние во времени и как подготавливаются данные для отображения.</p>
     <p>Чтобы искусственно не разделять технологии, добавляя разметку и логику в отдельные файлы, React решает это
-    с помощью слабо связанных единиц - "компонентов". Мы обязательно ознакомимся с ними в последующих главах. Если
+    с помощью слабо связанных единиц&nbsp;— «компонентов». Мы обязательно ознакомимся с ними в последующих главах. Если
     же вы все ещё неуверенно делаете разметку в JS, то по ходу нашего курса вы будете делать это более комфортно.</p>
     <p>JSX не обязателен при работе с React, но большинство пользователей считает его неплохой визуальной помощью,
     при работе с UI в коде JavaScript. Он позволяет React указывать на более конкретные ошибки и предупреждения.
@@ -151,7 +151,7 @@
         <p>Поскольку JSX ближе к JavaScript, чем к HTML, React DOM использует стиль написания <mark>camelCase,</mark>
         а не атрибуты-имена как в HTML.</p>
         <p>Например, <mark>class</mark> выглядит в JSX как <mark class="markJSX">className</mark>, и
-        <mark>tabindex</mark> - как <mark class="markJSX">tabIndex</mark>.</p>
+        <mark>tabindex</mark>&nbsp;— как <mark class="markJSX">tabIndex</mark>.</p>
     </div>
 
     <p class="section">Определение дочерних элементов в JSX</p>
@@ -186,7 +186,7 @@
     <p>По умолчанию, React DOM экранирует любые значения, добавляемые в JSX, перед их обработкой. Таким образом
     гарантируется, что вы никак не сможете получить что-то, что явно не прописано в вашем приложении. Все данные
     преобразуются в строку перед их обработкой. Это помогает предотвратить XSS-атаки ("cross-site scripting"
-    - межсайтовый скриптинг).</p>
+    &nbsp;— межсайтовый скриптинг).</p>
 
     <p class="section">Представление объектов в JSX</p>
 
@@ -210,7 +210,7 @@
     </code></pre>
 
     <p><mark>React.createElement()</mark> выполняет несколько проверок, чтобы помочь вам написать код без ошибок.
-    По существу - создает вот такой объект:</p>
+    По существу&nbsp;— создает вот такой объект:</p>
 
     <pre><code class="language-js">
         // Note: Эта структура упрощена
@@ -223,7 +223,7 @@
     };
     </code></pre>
 
-    <p>Такие объекты называются "элементы React". Вы можете представить себе их как описание того, что вы видите
+    <p>Такие объекты называются «элементы React». Вы можете представить себе их как описание того, что вы видите
     на экране. React читает эти объекты и использует их для построения и обновления DOM.</p>
     <p>Мы рассмотрим создание React элементов в DOM в следующей главе.</p>
 
