--- a/examples/quick-start/lifting-state-up/index.html
+++ b/examples/quick-start/lifting-state-up/index.html
@@ -113,7 +113,7 @@
 
     <p class="section">Добавление второго поля ввода</p>
 
-    <p>Теперь мы добавим ещё одну возможность - ввод температуры в градусах по Фаренгейту, а также синхронизируем оба
+    <p>Теперь мы добавим ещё одну возможность&nbsp;— ввод температуры в градусах по Фаренгейту, а также синхронизируем оба
     варианта.</p>
     <p>Мы можем начать с извлечения компонента <mark>TemperatureInput</mark> из <mark>Calculator</mark>. Также, добавим
     новое свойство <mark>scale</mark>, хранящее или <mark>"c"</mark>, или <mark>"f"</mark>.</p>
@@ -231,9 +231,9 @@
 
     <p>В React делиться состоянием можно передачей его наверх к ближайшему общему предку компонентов. Мы удалим
     локальное состояние из <mark>TemperatureInput</mark> и переместим его в <mark>Calculator</mark>.</p>
-    <p>Если <mark>Calculator</mark> будет владеть таким состоянием, то оно станет "источником истины" для обоих полей
+    <p>Если <mark>Calculator</mark> будет владеть таким состоянием, то оно станет «источником истины» для обоих полей
     ввода. Он сможет давать им значения, которые будут согласовываться друг с другом. Как только свойства обоих
-    компонентов <mark>TemperatureInput</mark> передадутся от их общего родителя - компонента <mark>Calculator</mark>, то
+    компонентов <mark>TemperatureInput</mark> передадутся от их общего родителя&nbsp;— компонента <mark>Calculator</mark>, то
     поля начнут синхронизацию.</p>
     <p>Давайте разберем, как это работает, шаг за шагом.</p>
     <p>Сперва, мы заменяем <mark>this.state.temperature</mark> на <mark>this.props.temperature</mark> в компоненте
@@ -251,7 +251,7 @@
     состоянии, компонент <mark>TemperatureInput</mark> мог только вызывать <mark>this.setState()</mark> для изменения
     неё. Однако, теперь, когда <mark>temperature</mark> передаётся из родителя в качестве свойств,
     <mark>TemperatureInput</mark> не имеет контроля над ней.</p>
-    <p>В React, это обычно решается с помощью преобразования компонента в "управляемый". Также как и DOM
+    <p>В React, это обычно решается с помощью преобразования компонента в «управляемый». Также как и DOM
     <mark>&lt;input&gt;</mark> принимает свойства <mark>value</mark> и <mark>onChange</mark>,
     <mark>TemperatureInput</mark> принимает свойства <mark>temperature</mark> и <mark>onTemperatureChange</mark> из
     родителя <mark>Calculator</mark>.</p>
@@ -308,9 +308,9 @@
     </code></pre>
 
     <p>Что ж, вернемся к компоненту <mark>Calculator</mark>.</p>
-    <p>Мы будем хранить текущие значения входных данных - <mark>temperature</mark> и <mark>scale</mark> - в локальном
-    состоянии. Это то состояние, которое мы "подняли наверх" из полей входных данных, и оно будет служить
-    "источником истины" для их обоих. Это то минимальное представление всей информации, которое нам необходимо знать,
+    <p>Мы будем хранить текущие значения входных данных&nbsp;— <mark>temperature</mark> и <mark>scale</mark>&nbsp;— в локальном
+    состоянии. Это то состояние, которое мы «подняли наверх» из полей входных данных, и оно будет служить
+    «источником истины» для их обоих. Это то минимальное представление всей информации, которое нам необходимо знать,
     чтобы отобразить оба входных значения.</p>
     <p>Например, если мы введем "37" в поле Цельсия, то состояние компонента <mark>Calculator</mark> будет следующим:</p>
 
@@ -395,7 +395,7 @@
         это метод <mark>handleChange</mark> компонента <mark>TemperatureInput</mark>.</li>
         <li>Метод <mark>handleChange</mark> компонента <mark>TemperatureInput</mark> вызывает функцию
         <mark>this.props.onTemperatureChange()</mark> с новым значением. Её свойства, включающие
-        <mark>onTemperatureChange</mark>, передаются её родителем - компонентом <mark>Calculator</mark>.</li>
+        <mark>onTemperatureChange</mark>, передаются её родителем&nbsp;— компонентом <mark>Calculator</mark>.</li>
         <li>Во время предыдущего рендеринга, <mark>Calculator</mark> указал, что <mark>onTemperatureChange</mark> поля
         Цельсия <mark>TemperatureInput</mark> это метод <mark>handleCelsiusChange</mark> компонента
         <mark>Calculator</mark>, и <mark>onTemperatureChange</mark> поля Фаренгейта <mark>TemperatureInput</mark> -
@@ -417,13 +417,13 @@
 
     <p class="section">Усвоенное</p>
 
-    <p>Должен быть один "источник истины" для любой информации, которая изменяется в приложении React. Обычно,
+    <p>Должен быть один «источник истины» для любой информации, которая изменяется в приложении React. Обычно,
     компоненту, который необходимо отрисовать, добавляют первичное состояние. Затем, если другим компонентам также
     необходимо это состояние, то вы можете поднять его наверх к ближайшему общему предку. Вместо того, чтобы пытаться
     синхронизировать состояние между разными компонентами, вам следует воспользоваться передачей информации "вниз
     по течению".</p>
-    <p>Передача состояния наверх приводит к написанию более "шаблонного" кода, но это позволяет тратить меньше усилий
-    для поиска и решения ошибок. Так как любое состояние "живет" в каком-либо компоненте и только этот компонент может
+    <p>Передача состояния наверх приводит к написанию более «шаблонного» кода, но это позволяет тратить меньше усилий
+    для поиска и решения ошибок. Так как любое состояние «живет» в каком-либо компоненте и только этот компонент может
     менять его, то это позволяет уменьшить область ошибок. А также, вы можете применять любую пользовательскую логику
     для отклонения или изменения пользовательских данных.</p>
     <p>Если что-то может быть получено из свойств или состояния, то это, скорее всего, не должно быть в состоянии.
