--- a/examples/quick-start/lists-and-keys/index.html
+++ b/examples/quick-start/lists-and-keys/index.html
@@ -118,7 +118,7 @@
         );
     </code></pre>
 
-    <p>Когда вы запустите этот код, то получите предупреждение, что для списка необходим ключ. "Ключ" - особый строковый
+    <p>Когда вы запустите этот код, то получите предупреждение, что для списка необходим ключ. «Ключ»&nbsp;— особый строковый
     атрибут, который необходимо добавить для создания списка элементов. Далее мы расскажем, почему он настолько важен.</p>
     <p>Давайте объявим <mark>ключ</mark> в нашем списке внутри <mark>numbers.map()</mark>, тем самым исправив проблему
     недостатка ключа:</p>
