--- a/examples/quick-start/rendering-elements/index.html
+++ b/examples/quick-start/rendering-elements/index.html
@@ -54,7 +54,7 @@
 <div class="content">
     <p class="section">Создание элементов</p>
 
-    <p>Элементы - наименьшие составные части React приложения. Элемент описывает то, что вы хотите видеть на экране:</p>
+    <p>Элементы&nbsp;— наименьшие составные части React приложения. Элемент описывает то, что вы хотите видеть на экране:</p>
 
     <pre><code class="language-js">
        const element = &lt;h1&gt;Hello, world!&lt;/h1&gt;;
@@ -65,8 +65,8 @@
 
     <div class="warning">
         <p><b>Примечание:</b></p>
-        <p>Не путайте элементы с другим понятием React - "компоненты". С ними мы ознакомимся позже. Элементы
-        - это то, из чего состоят компоненты.</p>
+        <p>Не путайте элементы с другим понятием React&nbsp;— «компоненты». С ними мы ознакомимся позже. Элементы
+            &nbsp;— это то, из чего состоят компоненты.</p>
     </div>
 
     <p class="section">Добавление элемента в React DOM</p>
@@ -94,7 +94,7 @@
     <p class="section">Обновление созданного элемента</p>
 
     <p>Элементы React неизменяемы. Как только вы создали элемент, то уже не сможете изменить его атрибуты или
-    дочерние узлы. Элемент - как кадр из фильма: отображает состояние UI только в определённый момент времени.
+    дочерние узлы. Элемент&nbsp;— как кадр из фильма: отображает состояние UI только в определённый момент времени.
     </p>
     <p>Так как мы ещё не изучили достаточно глубоко React, то единственным вариантом изменить UI будет создание
     нового элемента с последующей его передачей в  <mark>ReactDOM.render()</mark>. Покажем это на примере отсчета
