--- a/examples/quick-start/state-and-lifecycle/index.html
+++ b/examples/quick-start/state-and-lifecycle/index.html
@@ -111,7 +111,7 @@
         );
     </code></pre>
 
-    <p>Чтобы реализовать это, нам необходимо добавить "состояние" компоненту <mark>Clock</mark>. Состояние подобно
+    <p>Чтобы реализовать это, нам необходимо добавить «состояние» компоненту <mark>Clock</mark>. Состояние подобно
     свойствам, но оно является закрытым и полностью контролируется компонентом. Мы упоминали ранее, что компоненты могут
     представлять собой классы с некоторыми дополнительными возможностями. Так вот, локальное состояние и есть
     возможность, доступная только в классах.</p>
@@ -241,8 +241,8 @@
 
     <p>В приложениях со многими компонентами очень важно освобождать ресурсы, взятые компонентами, при их
     уничтожении. Мы хотим запустить таймер для компонента <mark>Clock</mark>, когда он будет добавлен в DOM в первый раз.
-    В React это называется "загрузка". Также, мы хотим обнулить таймер, когда DOM, сформированный компонентом
-    <mark>Clock</mark>, удаляется. Это называется "выгрузка". Мы можем объявить специальные методы для
+    В React это называется «загрузка». Также, мы хотим обнулить таймер, когда DOM, сформированный компонентом
+    <mark>Clock</mark>, удаляется. Это называется «выгрузка». Мы можем объявить специальные методы для
     компонентов-классов, чтобы запускать некий код, когда компонент загружается и выгружается:</p>
 
     <pre><code class="language-js">
@@ -270,7 +270,7 @@
         }
     </code></pre>
 
-    <p>Эти методы называются "привязки жизненного цикла". Метод <mark>componentDidMount()</mark> запускается после
+    <p>Эти методы называются «привязки жизненного цикла». Метод <mark>componentDidMount()</mark> запускается после
     того, как компонент внедрится в DOM. Это отличное место для установки таймера:</p>
 
     <pre><code class="language-js">
@@ -456,7 +456,7 @@
     <p>Ни родительские, ни дочерние компоненты не могут знать, имеет ли компонент состояние, и они не должны заботиться о
     том, как объявлен компонент: как функция или класс. Вот почему состояние часто называют локальным или
     инкапсулированным. Оно не доступно ни одному другому компоненту, кроме собственного. Компонент может передать своё
-    состояние вниз - к своим потомкам - в качестве свойства:</p>
+    состояние вниз&nbsp;— к своим потомкам&nbsp;— в качестве свойства:</p>
 
     <pre><code class="language-js">
         &lt;h2&gt;Сейчас {this.state.date.toLocaleTimeString()}.&lt;/h2&gt;
@@ -476,8 +476,8 @@
             return <h2>It is {props.date.toLocaleTimeString()}.</h2>;
         }
     </code></pre>
-    <p>Это называется передачей "против течения". Любое состояние принадлежит определенному компоненту, и любая
-    информация или UI, полученная из этого состояния может влиять только на компоненты "ниже" дерева.</p>
+    <p>Это называется передачей «против течения». Любое состояние принадлежит определенному компоненту, и любая
+    информация или UI, полученная из этого состояния может влиять только на компоненты «ниже» дерева.</p>
     <p>Если представить дерево компонентов как водопад из свойств, то каждое состояние компонентов подобно
     дополнительному источнику воды, который присоединяется к водопаду в произвольной точке, но также течет вниз.</p>
     <p>Продемонстрируем, что все компоненты действительно изолированы. Для этого мы создадим компонент <mark>App</mark>,
