--- a/examples/quick-start/thinking-in-react/index.html
+++ b/examples/quick-start/thinking-in-react/index.html
@@ -55,7 +55,7 @@
 <div class="content">
     <p class="section">Мышление в React</p>
 
-    <p>React, по нашему мнению, - это отличный вариант для создания больших и быстрых веб-приложений с JavaScript. Он
+    <p>React, по нашему мнению,&nbsp;— это отличный вариант для создания больших и быстрых веб-приложений с JavaScript. Он
     отлично вписывается в Facebook и Instagram.</p>
     <p>Один из многих крупных моментов React это то, как следует обдумывать приложения при их создании. В этой главе
     мы покажем весь мыслительный процесс создания системы поиска товара на основе React.</p>
@@ -85,13 +85,13 @@
     имена. Если вы работаете с дизайнером, то, скорее всего, он уже это сделал. Так что поговорите с ним. Его названия
     слоёв в Photoshop могут стать отличными именами для ваших компонентов React!</p>
     <p>Но как понять, что должен представлять собой компонент? Просто используйте те же решения, которые вы используете
-    при создании новой функции или объекта. Одно из таких решений - это принцип единственной ответственности, означающий,
+    при создании новой функции или объекта. Одно из таких решений&nbsp;— это принцип единственной ответственности, означающий,
     что компонент, в идеале, должен делать только что-то одно. Если компонент слишком сильно разрастается, то следует
     разбить его на меньшие подкомпоненты.</p>
     <p>Так как чаще всего вы представляете модель данных JSON пользователю, то, если ваша модель построена правильно,
     ваш UI (и, естественно, структура компонентов) будет прекрасно отображаться. Это связано с тем, что UI и
     информационные модели данных имеют тенденцию придерживаться одной и той же информационной архитектуры, а это значит,
-    что работа по разделению UI на компоненты - тривиальна. Просто разбейте UI на компоненты, которые будут представлять
+    что работа по разделению UI на компоненты&nbsp;— тривиальна. Просто разбейте UI на компоненты, которые будут представлять
     конкретный фрагмент модели данных.</p>
 
     <img src="image2.png">
@@ -107,8 +107,8 @@
         <li><b>ProductRow (красный): </b> отображает строку для каждого товара.</li>
     </ol>
 
-    <p>Если вы взгляните на <mark>ProductTable</mark>, то увидите, что заголовок (содержащий подписи "Наименование" и
-    "Цена") не является отдельным компонентом. Исходя из вашего предпочтения, вы можете сделать его отдельным
+    <p>Если вы взгляните на <mark>ProductTable</mark>, то увидите, что заголовок (содержащий подписи «Наименование» и
+    «Цена») не является отдельным компонентом. Исходя из вашего предпочтения, вы можете сделать его отдельным
     компонентом или частью другого. В нашем случае, мы сделали его фрагментом <mark>ProductTable</mark>, потому что он
     является частью отрисовки коллекции данных, за которую и отвечает <mark>ProductTable</mark>. Однако, если этот
     заголовок сделать более сложным (например, применить к нему сортировку), то стоит сделать его отдельным компонентом
@@ -131,7 +131,7 @@
     <p>Теперь, когда у вас есть иерархия компонентов, пришло время воплотить ваше приложение. Самым простым способом
     является построение версии, которая будет принимать модель данных и отрисовывать UI, но без интерактивности. Лучше
     всего отделить эти процессы, потому что построение статической версии требует много типизации и никакого мышления, в
-    то время как интерактивность наоборот - не требует типизации и заставляет многое обдумывать. Далее мы увидим почему так.</p>
+    то время как интерактивность наоборот&nbsp;— не требует типизации и заставляет многое обдумывать. Далее мы увидим почему так.</p>
     <p>Чтобы построить статическую версию вашего приложения, которая будет отображать модель данных, вам необходимо
     сделать компоненты, которые будут использовать другие компоненты и передавать информацию через свойства. Свойства -
     это способ передачи информации от родителя потомкам. Если вы знакомы с концепцией состояния, то не будете
@@ -140,14 +140,14 @@
     нужно.</p>
     <p>Вы можете начать строительство иерархии снизу вверх или сверху вниз. Т.е. вы можете начать построение иерархии
     как с главных (начиная с <mark>FilterProductTable</mark>), так и с конечных (начиная с <mark>ProductRow</mark>)
-    компонентов. В простых образцах обычно проще начинать сверху, а в больших проектах - снизу (а также проще писать
+    компонентов. В простых образцах обычно проще начинать сверху, а в больших проектах&nbsp;— снизу (а также проще писать
     тесты по мере построения).</p>
     <p>В конце данного этапа у вас будет библиотека многоразовых компонентов, которые будут рендерить вашу
     информационную модель. У компонентов будут только методы <mark>render()</mark>, так как это статическая версия
     приложения. Компонент наверху иерархии (<mark>FilterProductTable</mark>) получит вашу модель данных в качестве
     свойства. Если вы внесете изменения в эту модель и затем снова вызовите <mark>ReactDOM.render()</mark>, то UI
     обновится. Легко понять, как будет обновлен UI и где произойдут изменения, так как ничего сложного не происходит.
-    Односторонний поток данных в React (также называемый "односторонним строительством") сохраняет всё быстрым и
+    Односторонний поток данных в React (также называемый «односторонним строительством») сохраняет всё быстрым и
     модульным.</p>
 
     <p class="section">Шаг 3: Определитесь с минимальным (но полноценным) представлением состояния UI</p>
