--- a/examples/redux/about-redux/index.html
+++ b/examples/redux/about-redux/index.html
@@ -48,12 +48,12 @@
     <p class="section">О Redux</p>
 
     <p>Redux является предсказуемым контейнером состояния для JavaScript приложений (не путайте с WordPress фреймворком
-    – Redux Framework). Он позволяет вам создавать приложения, которые ведут себя одинаково в различных окружениях
+    — Redux Framework). Он позволяет вам создавать приложения, которые ведут себя одинаково в различных окружениях
     (клиент, сервер и нативные приложения), а также просто тестируются. Кроме того, это обеспечивает большой опыт
     отладки, например редактирование кода в реальном времени в сочетание с time traveling. Вы можете использовать Redux
     вместе с React или с любой другой view-библиотекой. Это крошечная библиотека (2kB, включая зависимости).</p>
-    <p>Redux - это ценный инструмент для управлением вашем состоянием, но вы также должны учитывать, подходит ли он для
-    вашей ситуации. Не используйте Redux только потому, что кто-то сказал, что вам нужно - потратьте некоторое время,
+    <p>Redux&nbsp;— это ценный инструмент для управлением вашем состоянием, но вы также должны учитывать, подходит ли он для
+    вашей ситуации. Не используйте Redux только потому, что кто-то сказал, что вам нужно&nbsp;— потратьте некоторое время,
     чтобы понять потенциальные выгоды и компромиссы с его использованием.</p>
     <p>Вот несколько советов о том, когда имеет смысл использовать Redux:</p>
 
