--- a/examples/redux/async-actions/index.html
+++ b/examples/redux/async-actions/index.html
@@ -113,7 +113,7 @@
         }
     </code></pre>
 
-    <p>Также пользователь может нажать кнопку "обновить" для обновления:</p>
+    <p>Также пользователь может нажать кнопку «обновить» для обновления:</p>
 
     <pre><code class="language-js">
         export const INVALIDATE_SUBREDDIT = 'INVALIDATE_SUBREDDIT'
