--- a/examples/redux/data-flow/index.html
+++ b/examples/redux/data-flow/index.html
@@ -92,7 +92,7 @@
             состояния приложения.</b></p>
 
             <p>Каким образом вы будете структурировать главный редюсер, зависит только от Вас. Redux поставляется с
-            хелпером <mark>combineReducers()</mark>, полезным для "разделения" главного редюсера на отдельные функции,
+            хелпером <mark>combineReducers()</mark>, полезным для «разделения» главного редюсера на отдельные функции,
             которые управляют отдельными ветвями дерева состояния. <mark>combineReducers()</mark> работает следующим
             образом. Допустим, у Вас есть два редюсера: один для списка todo-дел, второй — для выбранного сейчас режима
             отображения этого списка:</p>
