--- a/examples/redux/introduction/index.html
+++ b/examples/redux/introduction/index.html
@@ -81,7 +81,7 @@
     <p>Единственный способ изменить состояние — это применить действие — объект, который описывает, что случится.
     Это гарантирует, что представления или функции, реагирующие на события сети (network callbacks), никогда не изменят
     состояние напрямую. Поскольку все изменения централизованы и применяются последовательно в строгом порядке, поэтому
-    нет необходимости следить за "гонкой состояний". Действия — это всего лишь простые объекты, поэтому они могут быть
+    нет необходимости следить за «гонкой состояний». Действия — это всего лишь простые объекты, поэтому они могут быть
     залогированы, сериализированы, сохранены и затем воспроизведены для отладки или тестирования.</p>
     <p><b>Мутации написаны, как чистые функции</b></p>
     <p>Для определения того, как дерево состояния будет трансформировано действиями, вы пишете чистые редюсеры.
