--- a/examples/redux/middleware/index.html
+++ b/examples/redux/middleware/index.html
@@ -78,7 +78,7 @@
 
     <p class="section">Попытка #1: Логируем вручную</p>
 
-    <p>Простейшее решение - самостоятельно записывать действие и состояние каждый раз, когда вы вызываете
+    <p>Простейшее решение&nbsp;— самостоятельно записывать действие и состояние каждый раз, когда вы вызываете
     <mark>store.dispatch(action)</mark>. На самом деле это не слишком хорошее решение, это просто первый шаг на пути к
     пониманию проблемы.</p>
 
@@ -200,7 +200,7 @@
 
     <p class="section">Попытка #4: Прячем Monkeypatching</p>
 
-    <p>Monkeypatching — это хак. "Замените любой метод, который хотите" — что это за вид API? Давайте разберемся в его
+    <p>Monkeypatching — это хак. «Замените любой метод, который хотите», — что это за вид API? Давайте разберемся в его
     сути. Ранее наши функции заменяли <mark>store.dispatch</mark>. Что если бы они вместо этого возвращали новую функцию
     <mark>dispatch</mark>?</p>
 
