--- a/examples/redux/reducers/index.html
+++ b/examples/redux/reducers/index.html
@@ -330,7 +330,7 @@
     <p>Обратите внимание, что функция <mark>todos</mark> также принимает <mark>state</mark>, но <mark>state</mark> —
     это массив! Теперь <mark>todoApp</mark> просто передает срез состояния в функцию <mark>todos</mark>, которая, свою
     очередь, точно знает, как обновить именно этот кусок состояния. Это называется композицией редюсера и является
-    фундаментальным шаблоном построения Redux-приложений. Мы разбиваем главный редюсер на дочерние "подредюсеры",
+    фундаментальным шаблоном построения Redux-приложений. Мы разбиваем главный редюсер на дочерние «подредюсеры»,
     которые выполняют каждый свою работу — обрабатывают какой-то один кусочек данных (срез состояния). А главный
     редюсер только лишь решает, какому дочернему редюсеру и какой срез состояния отдать.</p>
     <p>Давайте рассмотрим это подробнее. Можем ли мы извлечь редюсер, который будет управлять только
