--- a/examples/redux/store/index.html
+++ b/examples/redux/store/index.html
@@ -47,7 +47,7 @@
 <div class="content">
     <p class="section">Хранилище</p>
 
-    <p>В предыдущих разделах мы определили действия, которые представляют факт того, что "что-то случилось" и редюсеры,
+    <p>В предыдущих разделах мы определили действия, которые представляют факт того, что «что-то случилось» и редюсеры,
     которые обновляют состояние в соответствии с этими действиями.</p>
     <p>Хранилище — это объект, который соединяет эти части вместе. Хранилище берет на себя следующие задачи:</p>
 
@@ -89,7 +89,7 @@
         // Выведем в консоль начальное состояние
         console.log(store.getState())
 
-        // Каждый раз при обновлении состояния - выводим его
+        // Каждый раз при обновлении состояния&nbsp;— выводим его
         // Отметим, что subscribe() возвращает функцию для отмены регистрации слушателя
         let unsubscribe = store.subscribe(() =>
             console.log(store.getState())
