--- a/examples/redux/usage-with-react/index.html
+++ b/examples/redux/usage-with-react/index.html
@@ -170,12 +170,12 @@
     функция действительно соединены вместе, как в случае с этим миниатюрным компонентом:</p>
 
     <ul>
-        <li>• <mark>AddTodo</mark> — поле ввода с кнопкой "Добавить"</li>
+        <li>• <mark>AddTodo</mark> — поле ввода с кнопкой «Добавить»</li>
     </ul>
 
-    <p>Технически мы могли бы "разбить" его на два компонента, но это может быть слишком рано на данном этапе. Вполне
+    <p>Технически мы могли бы «разбить» его на два компонента, но это может быть слишком рано на данном этапе. Вполне
     допустимо смешивать представление и логику, когда компонент очень маленький. Как только он вырастет, станет более
-    понятно как "разбить" его, так что мы пока оставим его смешанным.</p>
+    понятно как «разбить» его, так что мы пока оставим его смешанным.</p>
 
     <p class="section">Реализация компонентов-представлений</p>
 
