--- a/info/create_react_app/index.html
+++ b/info/create_react_app/index.html
@@ -46,7 +46,7 @@
     <div class="content">
         <p class="section">Создание React приложения (NPX, NPM, YARN)</p>
         <p class="section-title">Create React App</p>
-        <p>Пример <a target="_blank" href="https://github.com/facebook/create-react-app"><b>Create React App</b></a> - это лучший способ начать разработку нового одностраничного приложения React. Он настраивает вашу среду разработки, чтобы вы могли использовать новейшие функции JavaScript, предоставляет хороший опыт разработки и оптимизирует ваше приложение для продакшен. Вам понадобится Node >= 6 на вашем компьютере.</p>
+        <p>Пример <a target="_blank" href="https://github.com/facebook/create-react-app"><b>Create React App</b></a>&nbsp;— это лучший способ начать разработку нового одностраничного приложения React. Он настраивает вашу среду разработки, чтобы вы могли использовать новейшие функции JavaScript, предоставляет хороший опыт разработки и оптимизирует ваше приложение для продакшен. Вам понадобится Node >= 6 на вашем компьютере.</p>
         <p>Создавайте приложения React без конфигурации сборки. Приложение Create React работает на MacOS, Windows и Linux. Если что-то не работает или есть вопросы и нужна помощь, обращайтесь в сообщество Spectrum по адресу — <a target="_blank" href="//spectrum.chat/create-react-app">spectrum.chat/create-react-app</a>.</p>
         <p class="section-title">Краткий обзор</p>
         <p>Если вы ранее устанавливали create-Reaction-app глобально с помощью npm install -g create-Reaction-app, мы рекомендуем вам удалить пакет с помощью npm uninstall -g create-Reaction-app, чтобы npx всегда использовал последнюю версию.</p>
